feat: update sidebar with Smart Options toggle and dot phrases submenu

--- a/static-offline/package.json
+++ b/static-offline/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "arinote-offline",
+  "name": "@goodihope/arinote-offline",
   "version": "1.0.0",
   "description": "Offline Medical Documentation Platform",
   "type": "module",
