--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "@goodihope/arinote-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
