--- a/deploy-package/package.json
+++ b/deploy-package/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-express",
+  "name": "@goodihope/arinote-deploy",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
