--- a/.gitignore
+++ b/.gitignore
@@ -62,4 +62,5 @@ temp/
 attached_assets/
 
 # Build artifacts
-.cache/
+.cache/awscliv2.zip
+aws-infrastructure/.terraform/providers/registry.terraform.io/hashicorp/aws/5.100.0/linux_amd64/terraform-provider-aws_v5.100.0_x5
