--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ attached_assets/
 # Build artifacts
 .cache/awscliv2.zip
 aws-infrastructure/.terraform/providers/registry.terraform.io/hashicorp/aws/5.100.0/linux_amd64/terraform-provider-aws_v5.100.0_x5
+.terraform/
+*.zip
+terraform.tfstate*
