Improve dot phrase creator UX: fix input behavior in smart option panel to allow free-form text entry

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@google-cloud/vision": "^5.2.0",
     "@google/generative-ai": "^0.24.1",
     "@headlessui/react": "^2.2.4",
+    "@hello-pangea/dnd": "^18.0.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -65,16 +66,19 @@
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
+    "express-jwt": "^8.5.1",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "googleapis": "^150.0.1",
     "input-otp": "^1.4.2",
+    "jwks-rsa": "^3.2.0",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
     "oidc-client-ts": "^3.3.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "postgres": "^3.4.7",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
     "react-day-picker": "^8.10.1",
@@ -83,6 +87,7 @@
     "react-icons": "^5.4.0",
     "react-oidc-context": "^3.3.0",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.6.2",
     "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
